# data-engineering-test

./: .gitignore  Dockerfile  README.md  clean.py  extract.py  main.py  pyproject.toml
challenge/: challenge_1.py  challenge_2.py  challenge_3.py  challenge_4.py  challenge_5.py
helpers/: logging.py  menu.py
tests/: spark_test_case.py  test_challenge_1.py  test_challenge_2.py  test_challenge_3.py  test_challenge_4.py  test_challenge_5.py  test_clean.py  test_extract.py
